Fix letter-spacing from 4px to 2px in connect page Schedule section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -786,6 +786,7 @@ h2 {
     #connect-form {
         height: auto;
         margin: 0;
+        font-size: 20px;
     }
     #pref {
         display: unset;
@@ -807,6 +808,7 @@ h2 {
         margin-bottom: 50px;
         margin-top: 20px;
         padding: 10px;
+        letter-spacing: 2px;
     }
     /*------------------------------------------- Class options*/
     #board {
